Fix icon alignment for turns in expanded bike leg
This changes the way we fix the icon alignment for transit stops in
transit leg to apply only to that and not also to turns in bike leg.

--- a/src/components/ItineraryStep.css
+++ b/src/components/ItineraryStep.css
@@ -8,6 +8,11 @@
   stroke-width: 2px;
 }
 
+.ItineraryStep_iconSmall,
+.ItineraryStep_iconTiny {
+  margin-top: 2px;
+}
+
 .ItineraryStep_iconSmall path {
   stroke-width: 3px;
 }
